SBVTestSuite/TestSuite/CompileTests/PCase/PCase08.stderr
PCase08.hs:13:14: error: [GHC-39584]
    " PCase08.hs:16:9: pCase: Wildcard patterns are not allowed in proof case-splits.
    " In the quasi-quotation:
        [pCase|Expr e of
        Zero  -> undefined
        Num _ -> undefined
        _     -> undefined
      |]
   |
13 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

